# cc_project_template_gn

./: .gn  BUILD.gn  LICENSE  README.md
src/: BUILD.gn  bar.cc  bar.h  bar_test.cc  foo.cc  foo.h  foo_test.cc  main.cc
