# The location of the build configuration file.
buildconfig = "//build/BUILDCONFIG.gn"

# The secondary source root is a parallel directory tree where GN build files
# are placed when they can not be placed directly in the source tree, e.g. for
# third party source trees.
secondary_source = "//secondary/"
