executable("main") {
  sources = [
    "main.cc",
  ]
  deps = [
    ":foo_srcs",
  ]
}

FOO_SOURCES = [
  "bar.cc",
  "bar.h",
  "foo.cc",
  "foo.h",
]

source_set("foo_srcs") {
  sources = FOO_SOURCES
}

static_library("libfoo_static") {
  sources = FOO_SOURCES
}

shared_library("libfoo_shared") {
  sources = FOO_SOURCES
}

executable("foo_tests") {
  testonly = true

  sources = [
    "bar_test.cc",
    "foo_test.cc",
  ]
  deps = [
    ":foo_srcs",
    "//third_party/googletest:gtest",
    "//third_party/googletest:gtest_main",
  ]
}
